--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
-
 h1 {
-font-family:optima;
-font-size: 35px;
-text-decoration: underline;
+    font-family: optima;
+    font-size: 35px;
+    text-decoration: underline;
 }
 
 .nav {
     overflow: hidden;
 }
+
 .nav ul {
     padding: 0;
     margin: 0;
     text-align: right;
     height: 40px;
-    
+
 }
 
 .nav li {
@@ -28,7 +28,7 @@ text-decoration: underline;
     text-decoration: none;
     font-size: 22px;
     font-family: optima;
-   
+
 }
 
 .nav a:hover {
@@ -40,29 +40,31 @@ text-decoration: underline;
     background-color: white;
     color: bisque;
 }
+
 /* */
 .image {
     margin: 0;
     width: 24%;
-    height:auto;
+    height: auto;
 
 }
+
 /* chose this to make the image blur when hover */
-.image:hover{
-backdrop-filter: blur(10px);
-filter: blur(4px);
+.image:hover {
+    backdrop-filter: blur(10px);
+    filter: blur(4px);
 }
 
 .image2 {
     margin: 0;
-width:initial;
-height:inherit;
+    width: initial;
+    height: inherit;
 }
 
-.image2:hover{
+.image2:hover {
     backdrop-filter: blur(10px);
     filter: blur(4px);
-    }
+}
 
 .image3 {
     margin: 0;
@@ -70,8 +72,9 @@ height:inherit;
     height: 500px;
     display: inline;
 }
-    
-.image3:hover{
+
+
+.image3:hover {
     backdrop-filter: blur(10px);
     filter: blur(4px);
 }
@@ -80,24 +83,38 @@ height:inherit;
     margin: 0;
     width: 40%;
     height: 450px;
-    justify-content: left; 
+    justify-content: left;
 }
-    
-.image4:hover{
+
+.image4:hover {
     backdrop-filter: blur(10px);
     filter: blur(4px);
 }
+
 .image5 {
     margin: 0;
     width: 40%;
     height: 450px;
     justify-content: right;
 }
-    
-.image5:hover{
+
+.image5:hover {
     backdrop-filter: blur(10px);
     filter: blur(4px);
 }
+
+.image6 {
+    margin: 0;
+    width: 90%;
+    height: 500px;
+    display: inline;
+}
+
+.image6:hover {
+    backdrop-filter: blur(10px);
+    filter: blur(4px);
+}
+
 body {
     background-color: white;
     background-image: url("background.webp");
@@ -105,37 +122,39 @@ body {
 }
 
 h2 {
-     font-family: optima;
-     color: black;
-     text-decoration: underline;
-     }
+    font-family: optima;
+    color: black;
+    text-decoration: underline;
+}
 
-section{
+section {
     color: black;
     padding: 20px;
     display: flex;
 }
 
 .aboutme {
-    display:table-row;
+    display: table-row;
     height: 100px;
     width: 20px;
     padding: 50px;
     margin: 50px;
 }
+
 p {
     font-size: 27px;
 }
+
 .Projects {
-    display:table-row;
+    display: table-row;
     height: 100px;
     width: 20px;
-    }
+}
 
 .Projects ul li {
-list-style: none;
-display:inline-block;
-justify-content:space-evenly;
+    list-style: none;
+    display: inline-block;
+    justify-content: space-evenly;
 }
 
 .contact ul {
@@ -154,19 +173,20 @@ justify-content:space-evenly;
     font-family: optima;
     text-decoration: underline;
 }
-/* cited from w3schools.com  in order to make the code responsive to different screen sizes*/ 
+
+/* cited from w3schools.com  in order to make the code responsive to different screen sizes*/
 body {
     background-color: lightgrey;
-  }
-  
-  @media screen and (min-width: 400px) {
+}
+
+@media screen and (min-width: 400px) {
     body {
-      background-color: lightgrey;
+        background-color: lightgrey;
     }
-  }
-  
-  @media screen and (min-width: 800px) {
+}
+
+@media screen and (min-width: 800px) {
     body {
-      background-color: lightgrey;
+        background-color: lightgrey;
     }
-  }
+}
